src/objects/Potential_Product_Line__c.object
<CustomObject>
    <description>Child object of Potential. Each account will have a Potential which will have one to many potential product lines. Only the edited potential field can be updated by end users.</description>
    <fields>
        <fullName>Calculated_Potential__c</fullName>
        <label>Calculated Potential</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Involved_Party_ID__c</fullName>
        <formula>Potential_Header_Record__r.Customer__r.Involved_Party_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Involved Party ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <formula>Potential_Header_Record__r.Customer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_From__c</fullName>
        <label>Date From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_To__c</fullName>
        <label>Date To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Edited_Potential__c</fullName>
        <label>Edited Potential</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Potential_Header_ID__c</fullName>
        <description>To be used in BI only</description>
        <formula>Potential_Header_Record__r.Name</formula>
        <label>Potential Header ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potential_Header_Record__c</fullName>
        <label>Potential Header Record</label>
        <referenceTo>Potential__c</referenceTo>
        <relationshipLabel>Potential Product Lines</relationshipLabel>
        <relationshipName>Potential_Product_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Potential Product Lines</relationshipLabel>
        <relationshipName>Potential_Product_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Todays_Potential__c</fullName>
        <formula>IF(ISBLANK(Edited_Potential__c),Calculated_Potential__c, Edited_Potential__c)</formula>
        <label>Todays Potential</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Potential Product Line</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Calculated_Potential__c</columns>
        <columns>Edited_Potential__c</columns>
        <columns>Date_From__c</columns>
        <columns>Date_To__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BE_DK_Potentials</fullName>
        <columns>NAME</columns>
        <columns>Customer_Involved_Party_ID__c</columns>
        <columns>Date_From__c</columns>
        <columns>Date_To__c</columns>
        <columns>Product__c</columns>
        <columns>Calculated_Potential__c</columns>
        <columns>Edited_Potential__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Potential_Product_Line__c.BE_DK_Potential_Product_Line</value>
        </filters>
        <label>BE DK Potentials</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PP-{00000000}</displayFormat>
        <label>Potential Product Line ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Potential Product Lines</pluralLabel>
    <recordTypes>
        <fullName>BE_DK_Potential_Product_Line</fullName>
        <active>true</active>
        <description>Stores potentials for BE DK</description>
        <label>BE DK Potential Product Line</label>
    </recordTypes>
    <recordTypes>
        <fullName>Potential_Product_Line</fullName>
        <active>true</active>
        <description>All BAs except BE DK</description>
        <label>Potential Product Line</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>